--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: #1acc8d;
+  color: #0077FF;
   text-decoration: none;
 }
 
@@ -46,8 +46,8 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #1acc8d;
-  border-top-color: #d2f9eb;
+  border: 6px solid #0077FF;
+  border-top-color: #ff8800;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -83,7 +83,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #1acc8d;
+  background: #0077FF;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -97,7 +97,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .back-to-top:hover {
-  background: #2be4a2;
+  background: #0077FF;
   color: #fff;
 }
 
@@ -122,7 +122,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 80px;
   z-index: 997;
   transition: all 0.5s;
-  background: #bbdfbc;
+  background: #0077FF;
 }
 
 #header.header-transparent {
@@ -130,7 +130,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header.header-scrolled {
-  background: #bbdfbc;
+  background: #0077FF;
   height: 60px;
 }
 
@@ -201,7 +201,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 2px;
   bottom: 3px;
   left: 30px;
-  background-color: #1acc8d;
+  background-color: #0077FF;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -249,7 +249,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #1acc8d;
+  color: #0077FF;
 }
 
 .navbar .dropdown:hover > ul {
@@ -308,7 +308,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
   left: 0;
   bottom: 0;
-  background: #bbdfbc;
+  background: #0077FF;
   transition: 0.3s;
   z-index: 999;
 }
@@ -340,11 +340,11 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-mobile a {
   padding: 10px 20px;
   font-size: 15px;
-  color:#bbdfbc;
+  color:#0077FF;
 }
 
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #bbdfbc;
+  color: #0077FF;
 }
 
 .navbar-mobile .getstarted {
@@ -376,7 +376,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #1acc8d;
+  color: #0077FF;
 }
 
 .navbar-mobile .dropdown > .dropdown-active {
@@ -395,7 +395,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero:before {
   content: "";
-  background: #bbdfbc;
+  background: #074069;
   position: absolute;
   bottom: 0;
   top: 0;
@@ -413,7 +413,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero h1 span {
   color: #fff;
-  border-bottom: 4px solid #1acc8d;
+  border-bottom: 4px solid #0077FF;
 }
 
 #hero h2 {
@@ -432,11 +432,11 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   transition: 0.5s;
   color: #fff;
-  background: #1acc8d;
+  background: #ff8800;
 }
 
 #hero .btn-get-started:hover {
-  background: #17b57d;
+  background: #FFDFB1;
 }
 
 #hero .animated {
@@ -616,7 +616,7 @@ section {
   width: 120px;
   height: 1px;
   display: inline-block;
-  background: #1acc8d;
+  background: #0077FF;
   margin: 4px 10px;
 }
 
@@ -627,7 +627,7 @@ section {
   font-weight: 700;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #abd7ab;
+  color: #074069;
 }
 
 /*--------------------------------------------------------------
@@ -700,7 +700,7 @@ section {
 .about .icon-boxes h3 {
   font-size: 28px;
   font-weight: 700;
-  color: #cce7cd;
+  color: #074069;
   margin-bottom: 15px;
 }
 
@@ -721,13 +721,13 @@ section {
 }
 
 .about .icon-box .icon i {
-  color: #1acc8d;
+  color: #0077FF;
   font-size: 32px;
 }
 
 .about .icon-box:hover .icon {
-  background: #1acc8d;
-  border-color: #1acc8d;
+  background: #0077FF;
+  border-color: #0077FF;
 }
 
 .about .icon-box:hover .icon i {
@@ -747,7 +747,7 @@ section {
 }
 
 .about .icon-box .title a:hover {
-  color: #1acc8d;
+  color: #0077FF;
 }
 
 .about .icon-box .description {
@@ -917,7 +917,7 @@ section {
   left: 50%;
   transform: translateX(-50%);
   font-size: 20px;
-  background: #1acc8d;
+  background: #0077FF;
   padding: 12px;
   color: #fff;
   border-radius: 50px;
@@ -968,7 +968,7 @@ section {
 .details .content ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #1acc8d;
+  color: #0077FF;
 }
 
 .details .content p:last-child {
@@ -1079,7 +1079,7 @@ section {
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #1acc8d;
+  background-color: #0077FF;
 }
 
 @media (min-width: 1024px) {
@@ -1168,7 +1168,7 @@ section {
 }
 
 .team .member .social a:hover {
-  color: #1acc8d;
+  color: #0077FF;
 }
 
 .team .member .social i {
@@ -1201,7 +1201,7 @@ section {
 
 .pricing h4 {
   font-size: 36px;
-  color: #1acc8d;
+  color: #0077FF;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   margin-bottom: 20px;
@@ -1233,7 +1233,7 @@ section {
 }
 
 .pricing ul i {
-  color: #1acc8d;
+  color: #0077FF;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1251,7 +1251,7 @@ section {
 }
 
 .pricing .btn-buy {
-  background: #1acc8d;
+  background: #0077FF;
   display: inline-block;
   padding: 8px 35px 10px 35px;
   border-radius: 50px;
@@ -1265,12 +1265,12 @@ section {
 }
 
 .pricing .btn-buy:hover {
-  background: #149f6e;
+  background: #ff8800;
 }
 
 .pricing .featured h3 {
   color: #fff;
-  background: #1acc8d;
+  background: #0077FF;
 }
 
 .pricing .advanced {
@@ -1282,7 +1282,7 @@ section {
   z-index: 1;
   font-size: 14px;
   padding: 1px 0 3px 0;
-  background: #1acc8d;
+  background: #0077FF;
   color: #fff;
 }
 
@@ -1350,7 +1350,7 @@ section {
 }
 
 .faq .faq-list a.collapsed:hover {
-  color: #1acc8d;
+  color: #0077FF;
 }
 
 .faq .faq-list a.collapsed .icon-show {
@@ -1409,7 +1409,7 @@ section {
 }
 
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #1acc8d;
+  background: #0077FF;
   color: #fff;
 }
 
@@ -1479,7 +1479,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #1acc8d;
+  background: #ff8800;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1488,7 +1488,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: #34e5a6;
+  background: #ff8800;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1527,7 +1527,7 @@ section {
   margin-bottom: 15px;
   background: #010246;
   color: #fff;
-  border-top: 4px solid #1acc8d;
+  border-top: 4px solid #0077FF;
   text-align: center;
   padding: 30px 20px;
 }
@@ -1562,7 +1562,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #1acc8d;
+  background: #0077FF;
   color: #fff;
   text-decoration: none;
 }
@@ -1636,7 +1636,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #1acc8d;
+  background: #0077FF;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
